@@ -5,4 +5,6 @@
 2
 2
 2
-Total time spent: 58691
+68
+170
+Total time spent: 17688
