@@ -7,3 +7,5 @@ do(x^54+9*x^51+18*x^48-81*x^45+387*x^42-729*x^39+1953*x^36-7560*x^33+14229*x^30-
 do(x^2+396735)
 do(x^2+4372152)
 do(x^2+x+99184)
+do(polcyclo(68))
+do(polcyclo(85))
